[project]
name = "kplan"
version = "0.1.0"
description = "Robust planning engine for non-deterministic domains under bounded adversarial failure budgets."
requires-python = ">=3.12"
dependencies = [
    "pddl>=0.4.7,<0.5",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
